# ssapper

./: .gitignore  Cargo.toml  README.md  test.sh  test_single.sh
.github/: commit-emails.toml
.github/workflows/: rust.yml
benches/: bench.rs
dafny_testing/: README.md  agents.dfy  basic.dfy  dafny  network.dfy  proof_agreement.dfy  proof_agreement_chosenProperties1.dfy  proof_agreement_chosenProperties2.dfy  proof_agreement_invariants.dfy  proof_axioms.dfy  proof_helper.dfy  proof_validity.dfy  run_dafny.sh  setup.sh  synod.dfy  types.dfy  utils.dfy  verify
lib/: logging.rs  ssapper.rs  ssapper_async.rs  testing_common.rs
smtlib/: Cargo.toml  README.md
smtlib/src/: proc.rs  sexp.rs
src/: main.rs  main_async.rs  main_sync.rs  ssapper.rs  tests.rs  tool.rs
src/tests/: parse_test.rs  run_test.rs
testing_inputs/: README.md  dafny_to_smt2.sh  small.smt2  small2.smt2
testing_inputs/dafny_smt2/: example
testing_inputs/handmade/: in1  in2  in3  in4
testing_inputs/stainless_benchmarks/: cvc4-NA-0.smt2  cvc4-NA-1.smt2  cvc4-NA-10.smt2  cvc4-NA-100.smt2  cvc4-NA-1000.smt2  cvc4-NA-1001.smt2  cvc4-NA-1002.smt2  cvc4-NA-1003.smt2  cvc4-NA-1004.smt2  cvc4-NA-1005.smt2  cvc4-NA-1006.smt2  cvc4-NA-1007.smt2  cvc4-NA-1008.smt2  cvc4-NA-1009.smt2  cvc4-NA-101.smt2  cvc4-NA-1010.smt2  cvc4-NA-1011.smt2  cvc4-NA-1012.smt2  cvc4-NA-1013.smt2  cvc4-NA-1014.smt2  cvc4-NA-1015.smt2  cvc4-NA-1016.smt2  cvc4-NA-1017.smt2  cvc4-NA-1018.smt2  cvc4-NA-1019.smt2  cvc4-NA-102.smt2  cvc4-NA-1020.smt2  cvc4-NA-1021.smt2  cvc4-NA-1022.smt2  cvc4-NA-1023.smt2  cvc4-NA-1024.smt2  cvc4-NA-1025.smt2  cvc4-NA-1026.smt2  cvc4-NA-1027.smt2  cvc4-NA-1028.smt2  cvc4-NA-1029.smt2  cvc4-NA-103.smt2  cvc4-NA-1030.smt2  cvc4-NA-1031.smt2  cvc4-NA-1032.smt2  (+3152 more)
tests/: shared.rs  tests.rs
