[workspace.package]
version = "0.0.1"
edition = "2021"

[package]
name = "ssapper"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smtlib = { path = "./smtlib" }
peg = "0.8.1"
rayon = "1.9.0"
colored = "2.1.0"
clap = { version = "4.5.3", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.64"
futures = "0.3.30"
rusqlite = "0.32.1"
