[workspace.package]
version = "0.0.1"
edition = "2021"

[package]
name = "ssapper"
version.workspace = true
edition.workspace = true

[profile.test]
inherits = "release"

[[bin]]
name = "ssapper_sync"
path = "src/main_sync.rs"

[[bin]]
name = "ssapper"
path = "src/main_async.rs"
test = false

[[bin]]
name = "ssapper-tool"
path = "src/tool.rs"
test = false

[lib]
path = "lib/ssapper.rs"
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smtlib = { path = "./smtlib" }
peg = "0.8.1"
colored = "2.1.0"
clap = { version = "4.5.3", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.64"
rusqlite = "0.32.1"
tempfile = "3.13.0"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
