[workspace.package]
version = "0.0.1"
edition = "2021"

[package]
name = "ssapper"
version.workspace = true
edition.workspace = true
default-run = "ssapper"

[profile.release]
strip = true
panic = "abort"

[profile.test]
inherits = "release"

[[bin]]
name = "ssapper"
path = "src/main.rs"
test = false

[[bin]]
name = "ssapper-tool"
path = "src/tool.rs"
test = false

[lib]
path = "lib/ssapper.rs"
test = false
doctest = false

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[profile.bench]
inherits = "release"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smtlib = { path = "./smtlib" }
peg = "0.8.1"
colored = "2.1.0"
clap = { version = "4.5.3", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.64"
rusqlite = {version = "0.32.1", features = ["chrono"]}
tempfile = "3.13.0"
temp-env = "0.3.6"
rayon = "1.10.0"
which = "6.0.3"
sha256 = "1.5.0"
chrono = "0.4.38"
termplot = "0.1.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }